; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_devcrypto.c_bind_helper.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_devcrypto.c_bind_helper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@engine_devcrypto_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @bind_helper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bind_helper(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* @engine_devcrypto_id, align 4
  %11 = call i64 @strcmp(i8* %9, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %8, %2
  %14 = call i32 (...) @open_devcrypto()
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %13, %8
  store i32 0, i32* %3, align 4
  br label %24

17:                                               ; preds = %13
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @bind_devcrypto(i32* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %17
  %22 = call i32 (...) @close_devcrypto()
  store i32 0, i32* %3, align 4
  br label %24

23:                                               ; preds = %17
  store i32 1, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %21, %16
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i32 @open_devcrypto(...) #1

declare dso_local i32 @bind_devcrypto(i32*) #1

declare dso_local i32 @close_devcrypto(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
